adding readme file

--- a/Frontend/html/home.html
+++ b/Frontend/html/home.html
@@ -28,7 +28,7 @@
         <div class="courses">
             <div class="head">
                 <h1>Courses for you</h1>
-                <p>Listen to byte-sized courses rom top thinkers</p>
+                <p>Listen to byte-sized courses from top thinkers</p>
             </div>
             <div id="courses">
                 
@@ -38,7 +38,7 @@
         <div class="articles">
             <div class="head">
                 <h1>Articles for you</h1>
-                <p>Listen to byte-sized Article rom top thinkers</p>
+                <p>Listen to byte-sized Article from top thinkers</p>
             </div>
             <div id="article">
                 
